<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Main_Activity_Version_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Main_Activity_Players_Details_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/poppins"
            android:text="@string/players_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/Main_Activity_Version_TV"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Main_Activity_1st_Player_Name_Edit_Text"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:layout_marginStart="55dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_border_shape"
            android:hint="@string/enter_1st_player_name"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_Activity_Players_Details_TV"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Main_Activity_2nd_Player_Name_Edit_Text"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:layout_marginStart="55dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_border_shape"
            android:hint="@string/enter_2nd_player_name"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_Activity_1st_Player_Name_Edit_Text"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/Main_Smile_Image_View"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/smile"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_Activity_2nd_Player_Name_Edit_Text"
            android:layout_marginTop="80dp"
            android:layout_marginStart="140dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Main_Activity_Start_Game_Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/start_button_shape"
            android:elevation="20dp"
            android:text="@string/start_game"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Main_Smile_Image_View"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>